--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "nyc": "14.1.1",
     "junit-report-builder": "1.3.2"
   },
-  "snyk": true
+  "snyk": true,
   "renovate": {
     "extends": [
       "config:base"
