--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "colorette": "^1.1.0",
     "ferrum": "^1.2.0",
     "phin": "^3.4.0",
-    "snyk": "^1.207.2"
+    "snyk": "^1.207.2",
+    "uuid": "^3.3.2"
   },
   "devDependencies": {
     "@semantic-release/changelog": "^3.0.4",
