chore: Add tests for LogglyLogger

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "colorette": "^1.1.0",
     "ferrum": "^1.2.0",
     "phin": "^3.4.0",
+    "polka": "^0.5.2",
     "snyk": "^1.207.2",
     "uuid": "^3.3.2"
   },
