--- a/package.json
+++ b/package.json
@@ -30,17 +30,15 @@
     "uuid": "^3.3.2"
   },
   "devDependencies": {
+    "@adobe/eslint-config-helix": "^1.0.0",
     "@semantic-release/changelog": "3.0.4",
     "@semantic-release/git": "7.0.16",
     "@semantic-release/github": "5.4.2",
     "ajv": "6.10.2",
     "codecov": "3.5.0",
     "eslint": "6.2.0",
-    "eslint-config-airbnb": "18.0.1",
     "eslint-plugin-header": "3.0.0",
     "eslint-plugin-import": "2.18.2",
-    "eslint-plugin-jsx-a11y": "6.2.3",
-    "eslint-plugin-react": "7.14.3",
     "junit-report-builder": "1.3.3",
     "lodash": "4.17.15",
     "mocha": "6.2.0",
