--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@semantic-release/changelog": "3.0.4",
     "@semantic-release/git": "7.0.16",
     "@semantic-release/github": "5.4.3",
+    "bunyan": "^1.8.12",
     "ajv": "6.10.2",
     "codecov": "3.5.0",
     "eslint": "6.4.0",
