chore(docs): cleanup jsdoc and add command to update readme
fixes #28

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "nyc --reporter=text --reporter=lcov --check-coverage --branches 1 --statements 29 --lines 32 mocha",
     "test-ci": "circleci tests glob 'test/*.test.js' | circleci tests split --split-by=timings | xargs nyc --reporter=text --reporter=lcov mocha -R mocha-junit-reporter && codecov",
     "lint": "./node_modules/.bin/eslint .",
+    "docs": "npx jsdoc2md -t jsdoc2md/README.hbs src/*.js > README.md; echo",
     "semantic-release": "semantic-release",
     "snyk-protect": "snyk protect",
     "prepare": "npm run snyk-protect"
@@ -34,12 +35,13 @@
     "@semantic-release/changelog": "3.0.4",
     "@semantic-release/git": "7.0.16",
     "@semantic-release/github": "5.4.3",
-    "bunyan": "^1.8.12",
     "ajv": "6.10.2",
+    "bunyan": "^1.8.12",
     "codecov": "3.5.0",
     "eslint": "6.4.0",
     "eslint-plugin-header": "3.0.0",
     "eslint-plugin-import": "2.18.2",
+    "jsdoc-to-markdown": "^5.0.1",
     "junit-report-builder": "1.3.3",
     "lodash": "4.17.15",
     "mocha": "6.2.0",
