feat: Increase resolution of timestamps to nanoseconds
Introduce a new class BigDate that can store timestamps at arbitrary
precision and measures time at the nanosecond precision.

CoralogixLogger and messageFormatTechnical are updated to use those
higher precision time stamps.

Fixes: #43

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "homepage": "https://github.com/adobe/helix-log#readme",
   "dependencies": {
+    "big.js": "^5.2.2",
     "colorette": "^1.1.0",
     "ferrum": "^1.4.1",
     "phin": "^3.4.0",
