--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     "phin": "^3.4.0",
     "polka": "^0.5.2",
     "snyk": "^1.226.1",
-    "uuid": "^3.3.3"
+    "triple-beam": "^1.3.0",
+    "uuid": "^3.3.3",
+    "winston-transport": "^4.3.0"
   },
   "devDependencies": {
     "@adobe/eslint-config-helix": "1.1.0",
@@ -38,6 +40,7 @@
     "@semantic-release/github": "5.5.5",
     "ajv": "6.10.2",
     "bunyan": "1.8.12",
+    "winston": "^3.2.1",
     "codecov": "3.6.1",
     "eslint": "6.7.2",
     "eslint-plugin-header": "3.0.0",
