--- a/package.json
+++ b/package.json
@@ -8,9 +8,7 @@
     "test-ci": "circleci tests glob 'test/*.test.js' | circleci tests split --split-by=timings | xargs nyc --reporter=text --reporter=lcov mocha -R mocha-junit-reporter && codecov",
     "lint": "./node_modules/.bin/eslint .",
     "docs": "npx jsdoc2md -t jsdoc2md/README.hbs src/*.js > README.md; echo",
-    "semantic-release": "semantic-release",
-    "snyk-protect": "snyk protect",
-    "prepare": "npm run snyk-protect"
+    "semantic-release": "semantic-release"
   },
   "repository": {
     "type": "git",
@@ -28,7 +26,6 @@
     "ferrum": "^1.4.1",
     "phin": "^3.4.0",
     "polka": "^0.5.2",
-    "snyk": "^1.226.1",
     "triple-beam": "^1.3.0",
     "uuid": "^3.3.3",
     "winston-transport": "^4.3.0"
@@ -54,7 +51,6 @@
     "nyc": "14.1.1",
     "semantic-release": "15.13.31"
   },
-  "snyk": true,
   "renovate": {
     "extends": [
       "config:base"
