--- a/package.json
+++ b/package.json
@@ -23,9 +23,9 @@
   "dependencies": {
     "big.js": "^5.2.2",
     "colorette": "^1.1.0",
+    "coralogix-logger": "^1.1.24",
     "ferrum": "^1.4.1",
     "phin": "^3.4.0",
-    "polka": "^0.5.2",
     "triple-beam": "^1.3.0",
     "uuid": "^3.3.3",
     "winston-transport": "^4.3.0"
