--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/adobe/helix-log"
+    "url": "https://github.com/adobe/helix-log.git"
   },
   "author": "",
   "license": "Apache-2.0",
