--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,8 +1,8 @@
 version: 2.1
 executors:
-  node10:
+  node12:
     docker:
-      - image: circleci/node:10-stretch
+      - image: circleci/node:12
     environment:
       NPM_CONFIG_PREFIX: ~/.npm-global
 
@@ -14,8 +14,8 @@ commands:
           keys:
             - v1-dependencies-{{ arch }}-{{ checksum "package-lock.json" }}
       - run:
-          name: install npm 6.10.2
-          command: sudo npm -g install npm@6.10.2
+          name: install latest npm
+          command: sudo npm -g install npm@
       - run:
           name: Installing Dependencies
           command: npm install
@@ -29,7 +29,7 @@ commands:
 
 jobs:
   build:
-    executor: node10
+    executor: node12
     steps:
       - setup
       - run: mkdir junit
@@ -48,7 +48,7 @@ jobs:
           path: junit
 
   semantic-release:
-    executor: node10
+    executor: node12
     steps:
       - setup
       - run:
@@ -68,4 +68,4 @@ workflows:
             - build
           filters:
             branches:
-              only: master
+              only: main
