--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "Logging for Helix",
   "main": "src/index.js",
   "scripts": {
-    "test": "nyc --reporter=text --reporter=lcov --check-coverage --branches 1 --statements 29 --lines 32 mocha",
-    "test-ci": "circleci tests glob 'test/*.test.js' | circleci tests split --split-by=timings | xargs nyc --reporter=text --reporter=lcov mocha -R mocha-junit-reporter && codecov",
+    "test": "nyc mocha",
+    "test-ci": "nyc mocha && codecov",
     "lint": "./node_modules/.bin/eslint .",
     "docs": "npx jsdoc2md -t jsdoc2md/README.hbs src/*.js > README.md; echo",
     "semantic-release": "semantic-release"
@@ -14,6 +14,11 @@
     "type": "git",
     "url": "https://github.com/adobe/helix-log.git"
   },
+  "mocha": {
+    "recursive": "true",
+    "reporter": "mocha-multi-reporters",
+    "reporter-options": "configFile=.mocha-multi.json"
+  },
   "author": "",
   "license": "Apache-2.0",
   "bugs": {
@@ -21,19 +26,18 @@
   },
   "homepage": "https://github.com/adobe/helix-log#readme",
   "dependencies": {
-    "big.js": "^6.0.0",
-    "colorette": "^2.0.0",
-    "ferrum": "^1.7.0",
-    "phin": "^3.4.1",
+    "big.js": "^6.1.1",
+    "colorette": "^2.0.2",
+    "ferrum": "^1.9.3",
+    "phin": "^3.6.0",
     "polka": "^0.5.2",
     "triple-beam": "^1.3.0",
-    "winston-transport": "^4.3.0"
+    "winston-transport": "^4.4.0"
   },
   "devDependencies": {
     "@adobe/eslint-config-helix": "1.1.5",
     "@semantic-release/changelog": "5.0.1",
     "@semantic-release/git": "9.0.1",
-    "@semantic-release/github": "8.0.0",
     "ajv": "8.6.3",
     "bunyan": "1.8.15",
     "codecov": "3.8.3",
@@ -44,9 +48,9 @@
     "junit-report-builder": "3.0.0",
     "mocha": "9.1.1",
     "mocha-junit-reporter": "2.0.0",
-    "mocha-parallel-tests": "2.3.0",
+    "mocha-multi-reporters": "1.5.1",
     "nyc": "15.1.0",
-    "semantic-release": "18.0.0",
+    "semantic-release": "17.4.6",
     "uuid": "8.3.2",
     "winston": "3.3.3"
   },
