--- a/package.json
+++ b/package.json
@@ -30,9 +30,7 @@
     "colorette": "^2.0.2",
     "ferrum": "^1.9.3",
     "phin": "^3.6.0",
-    "polka": "^0.5.2",
-    "triple-beam": "^1.3.0",
-    "winston-transport": "^4.4.0"
+    "polka": "^0.5.2"
   },
   "devDependencies": {
     "@adobe/eslint-config-helix": "1.3.0",
@@ -51,8 +49,7 @@
     "mocha-multi-reporters": "1.5.1",
     "nyc": "15.1.0",
     "semantic-release": "18.0.0",
-    "uuid": "8.3.2",
-    "winston": "3.3.3"
+    "uuid": "8.3.2"
   },
   "renovate": {
     "extends": [
