--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,33 +3,21 @@ executors:
   node18:
     docker:
       - image: cimg/node:18.18
-    environment:
-      NPM_CONFIG_PREFIX: ~/.npm-global
 
 commands:
   setup:
     steps:
       - checkout
-      - restore_cache:
-          keys:
-            - v1-dependencies-{{ arch }}-{{ checksum "package-lock.json" }}
-      - run:
-          name: install latest npm
-          command: sudo npm -g install npm@
       - run:
           name: Installing Dependencies
-          command: npm install
-      - save_cache:
-          paths:
-            - node_modules
-          key: v1-dependencies-{{ arch }}-{{ checksum "package-lock.json" }}
+          command: npm ci
       - run:
           name: prepare test git user
           command: git config --global user.email "circleci@example.com" && git config --global user.name "CircleCi Build"
 
 jobs:
   build:
-    executor: node 18
+    executor: node18
     steps:
       - setup
       - run: mkdir junit
