--- a/.github/workflows/semantic-release.yaml
+++ b/.github/workflows/semantic-release.yaml
@@ -10,12 +10,11 @@ jobs:
     if: "!contains(github.event.head_commit.message, '[skip ci]')"
     steps:
       - uses: actions/checkout@v4
-      - name: Use Node.js 14.x
+      - name: Use Node.js 18.x
         uses: actions/setup-node@v4
         with:
-          node-version: '14.x'
-      - run: npm i -g npm@latest
-      - run: npm install
+          node-version: '18.x'
+      - run: npm ci
       - run: npm test
       - run: npm run semantic-release
         env:
