--- a/.renovaterc.json
+++ b/.renovaterc.json
@@ -1,3 +1,9 @@
 {
-  "extends": ["github>adobe/helix-shared"]
+  "extends": ["github>adobe/helix-shared"],
+  "packageRules": [
+    {
+      "matchPackageNames": ["phin"],
+      "allowedVersions": "<4.0.0"
+    }
+  ]
 }
