--- a/.renovaterc.json
+++ b/.renovaterc.json
@@ -1,17 +1,3 @@
 {
-  "extends": ["github>adobe/helix-shared"],
-  "packageRules": [
-    {
-      "matchPackageNames": ["phin"],
-      "allowedVersions": "<4.0.0"
-    },
-    {
-      "packageNames": ["@adobe/eslint-config-helix"],
-      "allowedVersions": "<3"
-    },
-    {
-      "packageNames": ["eslint"],
-      "allowedVersions": "<9"
-    }
-  ]
+  "extends": ["github>adobe/helix-shared"]
 }
