--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
   "type": "module",
   "scripts": {
     "test": "c8 mocha",
-    "test-ci": "c8 mocha && codecov",
     "lint": "./node_modules/.bin/eslint .",
     "docs": "npx jsdoc2md -t jsdoc2md/README.hbs src/*.js > README.md; echo",
     "semantic-release-dry": "semantic-release --dry-run --branches $CI_BRANCH",
@@ -21,43 +20,24 @@
     "reporter": "mocha-multi-reporters",
     "reporter-options": "configFile=.mocha-multi.json"
   },
-  "author": "",
   "license": "Apache-2.0",
   "bugs": {
     "url": "https://github.com/adobe/helix-log/issues"
   },
   "homepage": "https://github.com/adobe/helix-log#readme",
   "dependencies": {
-    "big.js": "^7.0.0",
-    "colorette": "^2.0.2",
-    "ferrum": "^1.9.3"
+    "colorette": "^2.0.2"
   },
   "devDependencies": {
     "@adobe/eslint-config-helix": "3.0.8",
     "@semantic-release/changelog": "6.0.3",
     "@semantic-release/git": "10.0.1",
     "c8": "10.1.3",
-    "codecov": "3.8.3",
     "eslint": "9.31.0",
     "junit-report-builder": "5.1.1",
     "mocha": "11.7.1",
     "mocha-junit-reporter": "2.2.1",
     "mocha-multi-reporters": "1.5.1",
     "semantic-release": "24.2.6"
-  },
-  "renovate": {
-    "extends": [
-      "config:base"
-    ],
-    "schedule": "at 07:00 pm on Monday",
-    "timezone": "Europe/Zurich",
-    "packageRules": [
-      {
-        "packagePatterns": [
-          ".*"
-        ],
-        "groupName": "any"
-      }
-    ]
   }
 }
