--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "6.0.6",
   "description": "Logging for Helix",
   "main": "src/index.js",
+  "type": "module",
   "scripts": {
-    "test": "nyc mocha",
-    "test-ci": "nyc mocha && codecov",
+    "test": "c8 mocha",
     "lint": "./node_modules/.bin/eslint .",
     "docs": "npx jsdoc2md -t jsdoc2md/README.hbs src/*.js > README.md; echo",
     "semantic-release-dry": "semantic-release --dry-run --branches $CI_BRANCH",
@@ -20,48 +20,24 @@
     "reporter": "mocha-multi-reporters",
     "reporter-options": "configFile=.mocha-multi.json"
   },
-  "author": "",
   "license": "Apache-2.0",
   "bugs": {
     "url": "https://github.com/adobe/helix-log/issues"
   },
   "homepage": "https://github.com/adobe/helix-log#readme",
   "dependencies": {
-    "big.js": "^7.0.0",
-    "colorette": "^2.0.2",
-    "ferrum": "^1.9.3",
-    "phin": "^3.7.0",
-    "polka": "^0.5.2"
+    "colorette": "^2.0.2"
   },
   "devDependencies": {
-    "@adobe/eslint-config-helix": "2.0.9",
+    "@adobe/eslint-config-helix": "3.0.8",
     "@semantic-release/changelog": "6.0.3",
     "@semantic-release/git": "10.0.1",
-    "ajv": "8.17.1",
-    "bunyan": "1.8.15",
-    "codecov": "3.8.3",
-    "eslint": "8.57.1",
+    "c8": "10.1.3",
+    "eslint": "9.31.0",
     "junit-report-builder": "5.1.1",
     "mocha": "11.7.1",
     "mocha-junit-reporter": "2.2.1",
     "mocha-multi-reporters": "1.5.1",
-    "nyc": "17.1.0",
-    "semantic-release": "24.2.6",
-    "uuid": "11.1.0"
-  },
-  "renovate": {
-    "extends": [
-      "config:base"
-    ],
-    "schedule": "at 07:00 pm on Monday",
-    "timezone": "Europe/Zurich",
-    "packageRules": [
-      {
-        "packagePatterns": [
-          ".*"
-        ],
-        "groupName": "any"
-      }
-    ]
+    "semantic-release": "24.2.6"
   }
 }
